# ntia-conformance-checker

./: .buildinfo  .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FAQ.md  Makefile  Pipfile  README.md  RULES.md  SECURITY.md  a.json  bandit.yml  genindex.html  index.html  modules.html  ntia_conformance_checker.html  objects.inv  osv-scanner.toml  py-modindex.html  pyproject.toml  release.md  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  modules.doctree  ntia_conformance_checker.doctree
.github/: dependabot.yml
.github/requirements/: apidoc.in  apidoc.txt  pylint.txt  python-publish.txt
.github/workflows/: apidoc.yml  bandit.yml  black.yml  build.yml  codeql.yml  generate-sbom.yml  malcontent.yaml  pylint.yml  python-app.yml  python-publish.yml  scorecard.yml  typecheck.yml
_modules/: index.html
_modules/ntia_conformance_checker/: base_checker.html  cli_utils.html  fsct_checker.html  main.html  ntia_checker.html  report.html  sbom_checker.html  spdx3_utils.html
_sources/: ntia_conformance_checker.rst.txt
checker/: check_anything.py
cli_tools/: check_anything.py  checker.py
docs/: Makefile  conf.py  index.rst  modules.rst
ntia_conformance_checker/: __init__.py  _deprecated.py  _version.py  base_checker.py  cisa_checker.py  cli_utils.py  constants.py  fsct_checker.py  main.py  model.py  ntia_checker.py  py.typed  registry.py  report.py  report_sarif.py  rule_based_checker.py  sarif_output.py  sbom_checker.py  spdx3_utils.py  spec.py  spec_loader.py
ntia_conformance_checker/cli_tools/: check_anything.py  checker.py  output.py
ntia_conformance_checker/probes/: __init__.py  _registry.py  presence.py
ntia_conformance_checker/rules/: README.md  _example.yaml  euaiact.yaml  fsct.yaml  fsct3-min.yaml  fsct3.yaml  ntia.yaml
tests/: __init__.py  test_checker.py  test_cli_options.py  test_main.py  test_output_sarif.py  test_real_world.py  test_spec_model.py
tests/data/: osv-scanner.toml
tests/data/SPDXSBOMExampleTests/: SPDXSBOMExampleMissingAuthorName.spdx.yml  alpine.spdx  bom-alpine-3.15.spdx.json  chainguard.spdx.json  osv-scanner.toml  photon.spdx.tag
tests/data/missing_author_name/: SPDXJsonExample.json  SPDXRdfExample-v2.3.spdx.rdf.xml  SPDXRdfExample.rdf  SPDXTagExample-v2.3.spdx  SPDXTagExample.tag  SPDXXMLExample-v2.3.spdx.xml  SPDXXmlExample.xml  SPDXYAMLExample-v2.3.spdx.yaml  SPDXYamlExample.yaml
tests/data/missing_component_name/: SPDXJsonExample.json  SPDXRdfExample.rdf  SPDXXmlExample.xml  SPDXYamlExample.yaml
tests/data/missing_component_version/: SPDXJSONExample-v2.3.spdx.json  SPDXJsonExample.json  SPDXRdfExample-v2.3.spdx.rdf.xml  SPDXRdfExample.rdf  SPDXTagExample-v2.3.spdx  SPDXTagExample.tag  SPDXXMLExample-v2.3.spdx.xml  SPDXXmlExample.xml  SPDXYAMLExample-v2.3.spdx.yaml  SPDXYamlExample.yaml
tests/data/missing_concluded_license/: SPDXJSONExample-v2.3.spdx.json  SPDXRdfExample-v2.3.spdx.rdf.xml  SPDXTagExample-v2.3.spdx  SPDXXMLExample-v2.3.spdx.xml  SPDXYAMLExample-v2.3.spdx.yaml
tests/data/missing_dependency_relationships/: SPDXJSONExample-v2.3.spdx.json  SPDXJsonExample.json  SPDXRdfExample-v2.3.spdx.rdf.xml  SPDXRdfExample.rdf  SPDXSimpleTag.tag  SPDXTagExample-v2.3.spdx  SPDXTagExample.tag  SPDXXMLExample-v2.3.spdx.xml  SPDXXmlExample.xml  SPDXYAMLExample-v2.3.spdx.yaml  SPDXYamlExample.yaml
tests/data/missing_supplier_name/: SPDXJSONExample-v2.3.spdx.json  SPDXJsonExample.json  SPDXRdfExample-v2.3.spdx.rdf.xml  SPDXRdfExample.rdf  SPDXTagExample-v2.3.spdx  SPDXXMLExample-v2.3.spdx.xml  SPDXXmlExample.xml  SPDXYAMLExample-v2.3.spdx.yaml  SPDXYamlExample.yaml
tests/data/missing_timestamp/: SPDXJSONExample-v2.3.spdx.json  SPDXJsonExample.json  SPDXRdfExample-v2.3.spdx.rdf.xml  SPDXRdfExample.rdf  SPDXTagExample-v2.3.spdx  SPDXTagExample.tag  SPDXXMLExample-v2.3.spdx.xml  SPDXXmlExample.xml  SPDXYAMLExample-v2.3.spdx.yaml  SPDXYamlExample.yaml
tests/data/missing_unique_identifiers/: SPDXJSONExample-v2.3.spdx.json  SPDXJsonExample.json  SPDXRdfExample-v2.3.spdx.rdf.xml  SPDXTagExample-v2.3.spdx  SPDXTagExample.tag  SPDXXMLExample-v2.3.spdx.xml  SPDXXmlExample.xml  SPDXYAMLExample-v2.3.spdx.yaml  SPDXYamlExample.yaml
tests/data/no_elements_missing/: SPDXJSONExample-v2.3.spdx.json  SPDXJsonExample.json  SPDXRdfExample-v2.3.spdx.rdf.xml  SPDXRdfExample.rdf  SPDXTagExample-v2.3.spdx  SPDXTagExample.tag  SPDXXMLExample-v2.3.spdx.xml  SPDXXmlExample.xml  SPDXYAMLExample-v2.3.spdx.yaml  SPDXYamlExample.yaml
tests/data/other_tests/: SPDXSBOMExample.spdx.yml  SPDXSimpleTag.tag  test_components_without_functions.spdx
tests/data/real_world_sboms/: spdx_sample_01.json  spdx_sample_04.spdx  spdx_sample_05.spdx  spdx_sample_07.spdx  spdx_sample_10.json  spdx_sample_12.json  spdx_sample_13.json  spdx_sample_14.spdx  spdx_sample_15.spdx
tests/data/spdx3/: README.md  has_no_software_package.json  missing_identifier.json  missing_supplier_name.json  missing_version.json  no_elements_missing.json  package_dependency_relationship.json
tests/doc_fest/FOSSology/: SPDX2TV_PyYAML-6.0.tar.gz.spdx  SPDX2TV_PyYAML-6.0.tar.gz_v2 (1).spdx.tag
tests/doc_fest/Kubernetes/: kubernetes-appbomination.spdx  kubernetes-frederick-serve.spdx.tag  kubernetes-pyyaml.spdx.tag  kubernetes-time.spdx
tests/doc_fest/MetaSpdxscanner/: app-bom-ination-1.0.spdx.tag  python3-pyyaml-6.0.spdx.tag
tests/doc_fest/OpenEmbedded/: python3-pyyaml-dbg.spdx.json  python3-pyyaml-dev.spdx.json  python3-pyyaml-src.spdx.json  python3-pyyaml.spdx.json  recipe-python3-pyyaml.spdx.json  recipe-time.spdx.json  runtime-python3-pyyaml-dbg.spdx.json  runtime-python3-pyyaml-dev.spdx.json  runtime-python3-pyyaml-src.spdx.json  runtime-python3-pyyaml.spdx.json  runtime-time-dbg.spdx.json  runtime-time-dev.spdx.json  runtime-time-doc.spdx.json  runtime-time-src.spdx.json  runtime-time.spdx.json  time-dbg.spdx.json  time-dev.spdx.json  time-doc.spdx.json  time-src.spdx.json  time.spdx.json
tests/doc_fest/Philips/: keyclock_sbom.json
tests/doc_fest/REA/: AppBOM-inationSBOM.spdx.tag  AppBOM-inationVDR.xml  (+2 more)
(+39 files in other folders)
