# SPDX-FileCopyrightText: 2024-2025 SPDX contributors
# SPDX-FileType: SOURCE
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm[toml]>=9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ntia_conformance_checker"
version = "4.1.1"
authors = [
    { name = "Josh Lin", email = "linynjosh@gmail.com" },
    { name = "John Speed Meyers", email = "johnmeyersster@gmail.com" },
    { name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" },
]
maintainers = [
    { name = "John Speed Meyers", email = "johnmeyersster@gmail.com" },
    { name = "Gary O'Neall", email = "gary@sourceauditor.com" },
    { name = "Josh Lin", email = "linynjosh@gmail.com" },
    { name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" },
    { name = "SPDX group at the Linux Foundation and others", email = "spdx-implementers+owner@lists.spdx.org" },
]
license = "Apache-2.0"
description = "Check SPDX SBOM for NTIA minimum elements and CISA baseline attributes"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
urls = { Homepage = "https://github.com/spdx/ntia-conformance-checker" }
requires-python = ">=3.9"
keywords = [
    "spdx",
    "sbom",
    "ntia",
    "cisa",
    "minimum elements",
    "baseline attributes",
    "software bill of materials",
    "bill of materials",
    "common SBOM",
    "software package data exchange",
    "software component transparency",
    "supply chain security",
]
dependencies = ["spdx-python-model==0.0.3", "spdx-tools==0.8.3"]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pylint>=3.3.9", # 3.3.9 is the last version supporting Python 3.9
    "pyrefly>=0.42.0",
    "pyright>=1.1.407",
    "pytype>=2024.9.13", # 2024.9.13 is the last version supporting Python 3.9
    "ruff>=0.14.5",
]
docs = [
    "sphinx>=7.4.7", # 7.4.7 is the last version supporting Python 3.9
    "sphinx-rtd-theme>=3.0.2",
]
test = [
    "beartype==0.21.0", # 0.21.0 is the last version supporting Python 3.9
    "coverage==7.10.7", # 7.10.7 is the last version supporting Python 3.9
    "pytest==8.4.2", # 8.4.2 is the last version supporting Python 3.9
]

[project.scripts]
# Both "ntia-checker" and "sbomcheck" are identical.
# "ntia-checker" is kept for backward compatibility.
# While "sbomcheck" is introduced for a more generic name,
# to accommodate other compliance standards.
ntia-checker = "ntia_conformance_checker.main:main"
sbomcheck = "ntia_conformance_checker.main:main"

[tool.ruff]
line-length = 88 # Same as black
indent-width = 4 # Same as black
target-version = "py39"
exclude = [
    "build",
    "dist",
    ".venv",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv/*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "N", "TC"]
ignore = ["E203", "E501"]
fixable = ["ALL"]

[tool.setuptools]
packages = ["ntia_conformance_checker"]
