# SPDX-FileCopyrightText: 2024-2026 SPDX contributors
# SPDX-FileType: SOURCE
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm[toml]>=10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "ntia_conformance_checker"
dynamic = ["version"]
authors = [
    { name = "Josh Lin", email = "linynjosh@gmail.com" },
    { name = "John Speed Meyers", email = "johnmeyersster@gmail.com" },
    { name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" },
]
maintainers = [
    { name = "John Speed Meyers", email = "johnmeyersster@gmail.com" },
    { name = "Gary O'Neall", email = "gary@sourceauditor.com" },
    { name = "Josh Lin", email = "linynjosh@gmail.com" },
    { name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" },
    { name = "SPDX group at the Linux Foundation and others", email = "spdx-implementers+owner@lists.spdx.org" },
]
license = "Apache-2.0"
description = "Check SPDX SBOM for NTIA minimum elements and CISA baseline attributes"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
keywords = [
    "spdx",
    "sbom",
    "ntia",
    "cisa",
    "minimum elements",
    "baseline attributes",
    "software bill of materials",
    "bill of materials",
    "common SBOM",
    "software package data exchange",
    "software component transparency",
    "supply chain security",
]
dependencies = ["spdx-python-model==0.0.4", "spdx-tools>=0.8.5"]

[project.urls]
Homepage = "https://github.com/spdx/ntia-conformance-checker"
Issues = "https://github.com/spdx/ntia-conformance-checker/issues"

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pylint>=4.0.5",
    "pyrefly>=0.58.0",
    "pyright>=1.1.408",
    "ruff>=0.14.9",
]
docs = ["Sphinx>=8.1.3"]
test = ["coverage>=7.13.5", "pytest>=9.0.2"]

[project.scripts]
# Both "ntia-checker" and "sbomcheck" are identical.
# "ntia-checker" is kept for backward compatibility.
# While "sbomcheck" is introduced for a more generic name,
# to accommodate other compliance standards.
ntia-checker = "ntia_conformance_checker.main:main"
sbomcheck = "ntia_conformance_checker.main:main"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
show_column_numbers = true
show_error_code_links = true
show_error_context = true
pretty = true
python_version = "3.10"
strict = true
strict_bytes = true
strict_equality = true
strict_equality_for_none = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.main]
disable = "duplicate-code"
ignore = ["_version.py"]

[tool.ruff]
line-length = 88 # Same as black
indent-width = 4 # Same as black
target-version = "py310"
exclude = [
    "build",
    "dist",
    ".venv",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv/*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "N", "TC"]
ignore = ["E203", "E501"]
fixable = ["ALL"]

[tool.setuptools]
packages = ["ntia_conformance_checker"]

[tool.setuptools_scm]
write_to = "ntia_conformance_checker/_version.py"

[tool.setuptools.package-data]
ntia_conformance_checker = ["py.typed"] # Signal type hinting support
